feat(headless): change email/phone during signup
